# eks_jupyterhub

./: .gitignore  Dockerfile  README.md  cdk.json  cdk.py  config.yaml  pyproject.toml
images/: hub.Dockerfile  traefik.Dockerfile  user.Dockerfile
templates/: config.yaml.j2  config_secrets.py.j2
