
[project]
name = "eks_jupyterhub"
version = "1.0.0"
description = "An AWS CDK app for Jupyterhub on EKS."
authors = [
    {name = "Grayden Shand", email = "graydenshand@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "aws-cdk-lib>=2.88.0",
    "boto3>=1.28.12",
    "PyYAML>=6.0.1",
    "mypy>=1.5.0",
    "ruff>=0.2.2",
    "jinja2>=3.1.3",
    "requests>=2.31.0",
]

[tool.pdm.scripts]
format.shell = "ruff format cdk.py"
deploy.shell = "cdk deploy -O output.json"

[tool.ruff]
line-length=120
